# Rust-Edge-Gateway

./: .dockerignore  .env.example  API_KEY_IMPLEMENTATION.md  Caddyfile  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_SUMMARY.md  Dockerfile  Dockerfile.prod  PROPOSAL.md  README.md  SECURITY_IMPLEMENTATION_SUMMARY.md  SERVICE_PROVIDER_ARCHITECTURE.md  SERVICE_PROVIDER_TESTING_PLAN.md  docker-compose.prod.yml  docker-compose.yml  test_service_providers.sh
crates/edge-hive-gateway/: Cargo.toml
crates/edge-hive-gateway/src/: compiler.rs  config.rs  db.rs  main.rs  router.rs  worker.rs
crates/edge-hive-sdk/: Cargo.toml
crates/edge-hive-sdk/src/: error.rs  lib.rs  response.rs  services.rs
crates/rust-edge-gateway/: Cargo.toml
crates/rust-edge-gateway-sdk/: Cargo.toml
crates/rust-edge-gateway-sdk/src/: context.rs  ipc.rs  lib.rs  request.rs  services.rs
crates/rust-edge-gateway/src/: admin_auth.rs  api.rs  bundle.rs  compiler.rs  config.rs  db.rs  db_admin.rs  main.rs  openapi.rs  router.rs  worker.rs
crates/rust-edge-gateway/src/admin_auth/: api_keys.rs  api_keys_actions.rs  api_middleware.rs  handlers.rs  middleware.rs  mod.rs  password.rs  recaptcha.rs  routes.rs  types.rs
crates/rust-edge-gateway/src/runtime/: handler.rs  mod.rs
crates/rust-edge-gateway/src/runtime/bundle/: manifest.rs
crates/rust-edge-gateway/src/runtime/services/: minio_actor.rs  minio_bridge.rs  mod.rs
crates/rust-edge-gateway/src/services/: email.rs  mod.rs
data/: edge_hive.db
deploy/: deploy-docs.ps1  deploy-docs.sh  deploy-to-droplet.sh  docker-compose.droplet.yml  edge-hive.service  nginx-edge-hive-catchall.conf  nginx-rust-edge-gateway-catchall.conf  rust-edge-gateway.service  setup-ssl-and-deploy.ps1
docs-content/: intro.md
docs-content/api/: endpoints.md
docs-content/handlers/: getting-started.md
docs-content/migration/: overview.md
docs-content/services/: overview.md
docs/book/: 404.html  CNAME  index.html  introduction.html  print.html  searchindex.js  toc.html  toc.js
docs/book/api/: collections.html  domains.html  endpoints.html  management.html  services.html
docs/book/architecture/: graceful-draining.html  handler-registry.html  overview.html  service-actors.html
docs/book/examples/: error-handling.html  hello-world.html  json-api.html  path-params.html  petstore.html  query-params.html
docs/book/getting-started/: first-handler.html  lifecycle.html  quick-start.html
docs/book/sdk/: context.html  errors.html  handlers.html  request.html  response.html  services.html
docs/book/sdk/services/: database.html  email.html  ftp.html  redis.html  storage.html
docs/src/: SUMMARY.md  introduction.md
docs/src/api/: endpoints.md  management.md  services.md
docs/src/architecture/: graceful-draining.md  handler-registry.md  overview.md  service-actors.md
docs/src/examples/: error-handling.md  hello-world.md  json-api.md  path-params.md  petstore.md  query-params.md
docs/src/getting-started/: first-handler.md  lifecycle.md  quick-start.md  step-by-step-guide.md
docs/src/sdk/: context.md  handlers.md  services.md
docs/src/sdk/services/: email.md  ftp.md
examples/hello-world/: handler.rs
examples/services/: README.md
examples/services/ftp/: handler.rs
examples/services/minio/: minio.json
examples/services/mysql/: mysql.json
examples/services/postgres/: postgres.json
examples/services/redis/: data.json
examples/services/smtp/: data.json
handlers/213f5659-c2e6-4a1b-9063-8b8b0a87b126/: Cargo.toml
handlers/c88d645f-98bd-4b05-b129-e43e56dce188/: Cargo.toml
handlers/eb6c2ae3-c105-4d3e-b726-ab170dcd2263/: Cargo.toml
handlers/eb6c2ae3-c105-4d3e-b726-ab170dcd2263/src/: handler.rs  main.rs
handlers/f9785215-9776-41d5-adb2-3b48885d2e21/: Cargo.toml
scripts/: build-and-publish.ps1  build-and-publish.sh  deploy-dockerhub.sh  deploy-hello-world.ps1  deploy-to-droplet.ps1  deploy.sh  fix-env-remote.ps1  init-docs.sh  init-workspace.sh  test-docker-setup.ps1  test-podman-setup.ps1  update-api-key-permissions.ps1
static/: site.webmanifest
static/admin/: api-keys.html  app.js  change-password.html  index.html  login.html  openapi.yaml
static/admin/css/: api-keys.css
static/admin/js/: api-keys.js
terraform/: main.tf
