[workspace]
resolver = "2"
members = [
    "crates/rust-edge-gateway-sdk",
    "crates/rust-edge-gateway",
]

[workspace.package]
version = "0.2.1"
edition = "2021"
license = "MIT"
authors = ["Rust Edge Gateway Team"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Utilities
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"

# SDK specific
bytes = "1"
