[package]
name = "rust-edge-gateway-sdk"
version.workspace = true
edition = "2021"
license.workspace = true
description = "SDK for writing Rust Edge Gateway handlers"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
