[package]
name = "rust-edge-gateway-sdk"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "SDK for writing Rust Edge Gateway handlers"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
bytes = "1"
base64 = "0.22"

# Optional async runtime support
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"], optional = true }

[features]
default = []
async = ["tokio"]

[dev-dependencies]
