[package]
name = "rust-edge-gateway"
version.workspace = true
edition = "2021"
license.workspace = true
description = "Rust Edge Gateway and Worker Supervisor"

[[bin]]
name = "rust-edge-gateway"
path = "src/main.rs"

[dependencies]
rust-edge-gateway-sdk = { path = "../rust-edge-gateway-sdk" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
