[package]
name = "213f5659-c2e6-4a1b-9063-8b8b0a87b126"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
edge-hive-sdk = { path = "../../crates/edge-hive-sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
