[package]
name = "handler_eb6c2ae3_c105_4d3e_b726_ab170dcd2263"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
edge-hive-sdk = { path = "../../crates/edge-hive-sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
