[package]
name = "f9785215-9776-41d5-adb2-3b48885d2e21"
version = "0.1.0"
edition = "2021"

[dependencies]
edge-hive-sdk = {{ path = "../../crates/edge-hive-sdk" }}
serde = {{ version = "1", features = ["derive"] }}
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
